# appmotor

./: CMakeLists.txt  README  README.md  test
rpm/: mapplauncherd.changes  mapplauncherd.spec
src/booster-generic/: CMakeLists.txt  booster-generic@.service
src/common/: report.c  report.h  sailjail.c  sailjail.h
src/invoker/: CMakeLists.txt  invokelib.c  invoker.c
src/launcherlib/: CMakeLists.txt  appdata.cpp  appdata.h  booster.cpp  booster.h  connection.cpp  connection.h  daemon.cpp  daemon.h  logger.cpp  logger.h
src/single-instance/: CMakeLists.txt
